Add functionality for image generation by introducing new nodes and scripts. Added 'register.js', 'runner.js', and 'trigger.js' for managing state and execution. Updated 'package.json' to include new scripts and added node modules for image processing.

--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "Space Image generator from Exosphere booth at IndiaFOSS 2025",
   "type": "module",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "runner": "node runner.js",
+    "register": "node register.js",
+    "trigger": "node trigger.js"
   },
   "repository": {
     "type": "git",
